same navbar for all pages

--- a/website/src/_includes/layouts/article.html
+++ b/website/src/_includes/layouts/article.html
@@ -27,13 +27,14 @@
     <link rel="stylesheet" href="/css/blog.css" />
     <link id="prism-theme" rel="stylesheet" href="/css/prism-light.min.css"/>
     <link href="/css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/css/design3-nav.css">
     <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
 
   <body class="bg-[#F3F6F7] dark:bg-[#0C0B13]">
     {% include "navbar.html" %}
 
-    <div class="container px-5">
+    <div class="container px-5 mt-[66px]">
       <a class="inline-block text-grey-black dark:text-white my-5 underline underline-offset-2" href="/blog"><&nbsp;Back to list</a>
     </div>
 
