--- a/website/src/_includes/layouts/community_vouchers.html
+++ b/website/src/_includes/layouts/community_vouchers.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="/css/blog.css" />
     <link id="prism-theme" rel="stylesheet" href="/css/prism-light.min.css"/>
     <link href="/css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/css/design3-nav.css">
     <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
 
