--- a/website/src/_includes/layouts/jobs.html
+++ b/website/src/_includes/layouts/jobs.html
@@ -18,13 +18,12 @@
         <link id="prism-theme" rel="stylesheet" href="/css/prism-light.min.css" />
         <link href="/css/style.css" rel="stylesheet" />
         <link rel="stylesheet" href="/css/doc.css" />
+        <link rel="stylesheet" href="/css/design3-nav.css">
         <script async defer src="https://buttons.github.io/buttons.js"></script>
     </head>
 
     <body class="bg-[#F3F6F7] dark:bg-[#0C0B13]">
-        <section class="w-full bg-transparent fixed top-0 z-50">
-            {% include "navbar.html" %}
-        </section>
+        {% include "navbar.html" %}
 
         <section id="doc" class="bg-white dark:bg-[#17203D] mt-[66px]">
             <main class="container px-4 lg:px-7 py-10 md:py-16">
