--- a/website/src/_includes/layouts/privacy.html
+++ b/website/src/_includes/layouts/privacy.html
@@ -26,13 +26,14 @@
     <link href="/css/tailwind.css" rel="stylesheet" />
     <link rel="stylesheet" href="/css/blog.css" />
     <link href="/css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/css/design3-nav.css">
     <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
 
   <body class="bg-[#F3F6F7] dark:bg-[#0C0B13]">
     {% include "navbar.html" %}
 
-    <section id="article" class="container mt-[25px] mb-[75px] bg-white dark:bg-[#17203D] px-5">
+    <section id="article" class="container mt-[66px] mb-[75px] bg-white dark:bg-[#17203D] px-5">
       <div class="py-6 md:p-[60px]">{{ content | safe }}</div>
     </section>
 
