--- a/website/src/css/design3.css
+++ b/website/src/css/design3.css
@@ -505,11 +505,59 @@ section.cover div.socials a img.no-border {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap: 16px;
+    gap: 12px;
 }
 
 .publications-btns img {
     height: 40px;
+}
+
+.security-btns {
+    position: absolute;
+    bottom: 24px;
+    right: auto;
+    left: auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+}
+
+.security-btns img {
+    height: 40px;
+}
+
+.box-btn {
+    height: 40px;
+    padding: 0 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-family: 'Manrope', 'GT-Walsheim', sans-serif;
+    font-weight: 700;
+    letter-spacing: -0.25px;
+    border-radius: 8px;
+}
+
+.box-btn.btn-1 {
+    background-color: #639bd9;
+}
+
+.box-btn.btn-2 {
+    background: linear-gradient(100deg,
+            #ffb55d 0%,
+            #fff494 50%,
+            #fbffdd 100%);
+}
+
+.security-audits {
+    font-family: 'Manrope', 'GT-Walsheim', sans-serif;
+    font-weight: 300;
+    color: white;
+    width: 80px;
+    line-height: 1.2;
 }
 
 /* --- MAIN SECTIONS --- */
