add hash & update pages

--- a/website/src/_includes/layouts/token.html
+++ b/website/src/_includes/layouts/token.html
@@ -30,7 +30,7 @@
   <body class="bg-[#F3F6F7] dark:bg-[#0C0B13]">
     {% include "navbar.html" %}
 
-    <section id="article" class="container mb-[75px] bg-white dark:bg-[#17203D] px-5 mt-10">
+    <section id="article" class="container mb-[75px] bg-white dark:bg-[#17203D] px-5 mt-[66px]">
       <div class="py-6 md:p-[60px]">{{ content | safe }}</div>
     </section>
 
