--- a/website/src/css/design3.css
+++ b/website/src/css/design3.css
@@ -404,12 +404,13 @@ section.page {
     /* fallback */
     height: 100lvh;
     padding-bottom: calc(100lvh - 100svh);
+    z-index: 10;
 }
 
 section.page .area {
-    position: relative;
     width: var(--sec-w);
     height: var(--sec-h);
+    z-index: 11;
     /* border: 2px solid red; */
 }
 
@@ -419,6 +420,7 @@ section.cover {
     background-size: var(--cover-bg-w) var(--cover-bg-h);
     background-position: center;
     background-repeat: no-repeat;
+    z-index: 12;
 }
 
 .dark section.cover {
@@ -473,28 +475,148 @@ section.cover div.content p {
     max-width: calc(var(--sec-vwu) * 25);
 }
 
-section.cover div.socials {
+.publications-btns {
     position: absolute;
-    width: var(--sec-w);
-    bottom: calc(var(--sec-vhu) * 3);
-    padding: 0 calc(var(--sec-vwu) * 4);
+    bottom: 24px;
+    left: 16px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+}
 
+.publications-btns img {
+    height: 36px;
+}
+
+.security-btns {
+    position: absolute;
+    bottom: 24px;
+    left: 0;
+    transform: translateX(calc((100vw / 2) - 50%));
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+}
+
+.security-btns img {
+    height: 36px;
+}
+
+.box-btn {
+    height: 36px;
+    padding: 0 16px;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
-    gap: calc(var(--sec-vwu) * 0.6);
+    justify-content: center;
+    font-size: 16px !important;
+    font-family: 'Manrope', 'GT-Walsheim', sans-serif !important;
+    font-weight: 700 !important;
+    letter-spacing: -0.25px !important;
+    border-radius: 6px !important;
+}
+
+.box-btn.btn-1 {
+    background-color: #639bd9;
+}
+
+.box-btn.btn-2 {
+    background: linear-gradient(100deg,
+            #ffb55d 0%,
+            #fff494 50%,
+            #fbffdd 100%);
+}
+
+.security-audits {
+    font-size: 14px !important;
+    font-family: 'Manrope', 'GT-Walsheim', sans-serif !important;
+    font-weight: 300 !important;
+    text-align: left;
+    color: white;
+    width: 55px;
+    line-height: 1.2;
+}
+
+@media screen and (max-width: 1280px) {
+    .publications-btns {
+        display: none;
+        visibility: hidden;
+    }
+
+    .security-btns {
+        transform: translateX(0);
+        left: 16px;
+    }
+}
+
+.socials {
+    position: absolute;
+    bottom: 22px;
+    right: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
     flex-wrap: wrap;
 }
 
-section.cover div.socials a img {
+.socials a img {
     width: auto;
-    height: calc(var(--sec-vhu) * 4.2);
+    height: 40px;
     border: #4f4f4f 1px solid;
-    border-radius: calc(var(--sec-vhu) * 0.8);
+    border-radius: 6px;
 }
 
-section.cover div.socials a img.no-border {
+.socials a img.no-border {
     border: none;
+}
+
+.desktop-app-btn .btn-content {
+    height: 40px;
+    background-color: #000;
+    border: #4f4f4f 1px solid;
+    border-radius: 6px;
+    padding: 6px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+}
+
+.desktop-app-btn .btn-content p {
+    margin: 0;
+    font-size: 10px !important;
+    font-family: 'Manrope', 'GT-Walsheim', sans-serif !important;
+    font-weight: 300 !important;
+    line-height: 1.2 !important;
+    text-align: left;
+    color: #fff;
+    width: 60px;
+}
+
+.desktop-app-btn .btn-content img {
+    height: 22px !important;
+    width: auto;
+}
+
+.desktop-app-btn .btn-content>div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4px;
+}
+
+@media screen and (max-width: 949px) {
+
+    .publications-btns,
+    .security-btns,
+    .socials {
+        position: static;
+    }
 }
 
 /* --- MAIN SECTIONS --- */
@@ -784,7 +906,19 @@ main .section-bg {
 }
 
 @media (max-width: 949px) {
+    section.cover div.content {
+        gap: calc(var(--sec-vhu) * 2.5);
+        transform: translateY(calc(var(--sec-vhu) * 5));
+    }
+
+    .publications-btns,
+    .security-btns,
+    .socials {
+        margin-top: calc(var(--sec-vhu) * 2);
+    }
+
     section.cover div.content h1 {
+        line-height: 0.85;
         font-weight: 700;
         font-size: calc(var(--sec-vwu) * 30);
         max-width: calc(var(--sec-vwu) * 65);
@@ -799,16 +933,6 @@ main .section-bg {
         font-weight: 400;
         font-size: calc(var(--sec-vwu) * 4.3);
         max-width: calc(var(--sec-vwu) * 65);
-    }
-
-    section.cover div.socials {
-        bottom: 32px;
-        gap: 10px;
-        justify-content: center;
-    }
-
-    section.cover div.socials a img {
-        height: 40px;
     }
 
 
