--- a/website/src/css/style.css
+++ b/website/src/css/style.css
@@ -392,7 +392,7 @@ a{
     position: relative;
     color: #0D0E12;
   }
-  
+
   .nav-link-text::before,
   .active .nav-link-text::before,
   .menu-link::before {
@@ -404,7 +404,7 @@ a{
     right: 0;
     transition: width 0.25s ease-out;
   }
-  
+
   .menu-link::before {
     background-color: #0D0E12;
   }
@@ -677,20 +677,20 @@ header nav {
 
 /* comparison */
 #comparison table thead th,
-#how-secure-comparison table thead th{
+#messengers-comparison table thead th{
   font-size: 16px;
   line-height: 36px;
   font-weight: 500;
   text-align: center;
 }
 #comparison table tbody td,
-#how-secure-comparison table tbody td{
+#messengers-comparison table tbody td{
   font-size: 16px;
   line-height: 24px;
   font-weight: 500;
 }
 #comparison table tbody tr > td:first-child,
-#how-secure-comparison table tbody tr > td:first-child{
+#messengers-comparison table tbody tr > td:first-child{
   font-size: 16px;
   line-height: 24px;
   font-weight: 500;
@@ -698,16 +698,52 @@ header nav {
 }
 
 [dir="rtl"] #comparison table tbody tr > td:first-child,
-[dir="rtl"] #how-secure-comparison table tbody tr > td:first-child{
+[dir="rtl"] #messengers-comparison table tbody tr > td:first-child{
   text-align: right;
 }
 
 @media (min-width: 1024px) {
   #comparison table tbody tr > td:first-child,
-  #how-secure-comparison table tbody tr > td:first-child{
+  #messengers-comparison table tbody tr > td:first-child{
     font-size: 18px;
     line-height: 36px;
-  }  
+  }
+}
+
+#messengers-comparison table td.criteria {
+  min-width: 100px;
+  height: 52px;
+  text-align: center;
+}
+
+#messengers-comparison table tbody span.criteria-mark {
+  font-size: 28px;
+}
+
+#messengers-comparison table tbody sup {
+  font-size: 14px;
+}
+
+@media (min-width: 1024px) {
+  #messengers-comparison table tbody span.criteria-mark {
+    font-size: 36px;
+  }
+
+  #messengers-comparison table tbody sup {
+    font-size: 18px;
+  }
+}
+
+#messengers-comparison table .green-check {
+  color: #1DB100;
+}
+
+#messengers-comparison table .yellow-check {
+  color: #FFD932;
+}
+
+#messengers-comparison table .red-ballot-x {
+  color: #EE220C;
 }
 
 /* hero */
@@ -925,7 +961,7 @@ p a{
   position: fixed;
   width: 320px;
   max-width: 100%;
-  z-index: 10001; 
+  z-index: 10001;
   transition: opacity .5s;
   padding-left: 5px;
   padding-right: 5px;
