--- a/website/src/css/design3.css
+++ b/website/src/css/design3.css
@@ -391,6 +391,11 @@ section.page {
     z-index: 2;
 }
 
+section.page-2 {
+    position: absolute;
+    top: 0;
+}
+
 .chrome-ios section.page,
 .safari-ios section.page {
     min-height: 110lvh;
@@ -628,10 +633,11 @@ main {
 main .section-bg {
     position: sticky;
     top: 0;
-    inset: 0;
+    left: 0;
+    right: 0;
     height: 100lvh;
     /* fallback */
-    margin-bottom: -100lvh;
+    /* margin-bottom: -100lvh; */
     /* cancel own layout height */
     width: 100%;
 
